--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -2,5 +2,7 @@
 {{define "body"}}
 <div>
     <h1>Hello!</h1>
+    <a href="/login">Login</a> or
+    <a href="/register">Register</a>
 </div>
 {{end}}
