--- a/ui/html/400.page.tmpl
+++ b/ui/html/400.page.tmpl
@@ -1,7 +1,7 @@
 {{template "base"}}
 {{define "body"}}
 <div>
-<h1>404 ERROR! Page not found.</h1>
-<h3>Bloody developers, doing anything but...</h3>
+<h1>404um [ˈfɔː/əʊ/ˈfɔːrəm]</h1>
+<h4>Forum not found.</h4>
 </div>
 {{end}}
