--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -1,7 +1,11 @@
 {{template "base" .}}
 {{define "body"}}
 <div>
+    {{if .AuthenticatedUser}}
+    <h2>Hello, {{.AuthenticatedUser.Name}}. You have been logged in.</h2>
+    {{else}}
     <h1>Hello!</h1>
+    {{end}}
     <a href="/login">Login</a> or
     <a href="/register">Register</a>
 </div>
