--- a/ui/html/register.page.tmpl
+++ b/ui/html/register.page.tmpl
@@ -1,6 +1,9 @@
 {{template "base".}}
 {{define "body"}}
 <form method="post" class="std auth">
+    {{if .AuthenticatedUser}}
+    <h2>Hello, {{.AuthenticatedUser.Name}}. You have been logged in.</h2>
+    {{end}}
     {{with .Form}}
 <div>
     <label for="username">Username:</label>
