--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -6,16 +6,28 @@
         <title>Forum</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- Local CSS -->
         <link rel="stylesheet" href="/static/css/mystyle.css" type="text/css" />
     </head>
 
     <body>
+        {{if .AuthenticatedUser}}
+            {{template "header-in"}}
+        {{else}}
+            {{template "header-out"}}
+        {{end}}
         <div class="container">
             <div>
                 {{template "body" .}}
             </div>
         </div>
         {{template "footer"}}
+
+        <!-- Bootstrap Buncle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
 {{end}}
