--- a/ui/html/login.page.tmpl
+++ b/ui/html/login.page.tmpl
@@ -1,30 +1,25 @@
 {{template "base" .}}
 {{define "body"}}
 <form method="post">
-    {{if .AuthenticatedUser}}
-    <h2>Hello, {{.AuthenticatedUser.Name}}. You have been logged in.</h2>
-    {{end}}
-{{with .Form}}
-<div>
-    {{with .Errors.Get "generic"}}
-    <label class='error'>{{.}}</label>
-{{end}}
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" value="{{.Get "username"}}">
-    {{with .Errors.Get "username"}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-</div>
-
-<div>
-    <label for="pass">Password (8 characters minimum):</label>
-    <input type="password" id="pass" name="password">
-           {{with .Errors.Get "password"}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-</div>
-
-<input type="submit" value="Sign in">
+	{{with .Form}}
+	<div class="mb-3">
+		{{with .Errors.Get "generic"}}
+			<label class='error'>{{.}}</label>
+		{{end}}
+		<label class="form-label" for="username">Username:</label>
+		<input class="form-control" type="text" id="username" name="username" value="{{.Get "username"}}">
+		{{with .Errors.Get "username"}}
+			<label class='error'>{{.}}</label>
+		{{end}}
+	</div>
+	<div>
+		<label class="form-label" for="pass">Password (8 characters minimum):</label>
+		<input class="form-control" type="password" id="pass" name="password">
+			{{with .Errors.Get "password"}}
+				<label class='error'>{{.}}</label>
+			{{end}}
+	</div>
+	<input class="btn btn-primary" type="submit" value="Sign in">
 </form>
 {{end}}
 {{end}}
