--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -28,4 +28,14 @@ label {
 
 .category-card {
 	min-width: 200px;
+	max-height: 500px;
+}
+
+.card-text {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 5;
+			line-clamp: 2;
+	-webkit-box-orient: vertical;
 }
