--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -8,10 +8,10 @@
     {{else}}
     <h2>Hello!</h2>
 	{{end}}
-	<div class="row row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-xxl-6 g-1 justify-content-center">
+	<div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-2 justify-content-start">
 		{{range .Categories}}
 		<div class="col">
-			<div class="card border-warning mb-3 mx-3 category-card">
+			<div class="card border-warning category-card h-100">
 				<div class="card-body">
 					<h5 class="card-title">{{.Title}}</h5>
 					<p class="card-text">{{.Description}}</p>
