Fixed adding posts with image and image display dimensions

--- a/ui/html/showpost.page.tmpl
+++ b/ui/html/showpost.page.tmpl
@@ -8,7 +8,7 @@
     <h4>Categories: {{.Category}}</h4>
     <h4>Posted by: {{.User}}</h4>
     {{with .ImageSrc}}
-    <img src="/static/{{.}}" alt="">
+    <img src="/static/{{.}}" alt="" class="postimg">
     {{end}}
 </div>
 {{end}}
