Added posts to category page

--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -13,7 +13,7 @@
 		<div class="col">
 			<div class="card border-warning category-card h-100">
 				<div class="card-body">
-					<h5 class="card-title">{{.Title}}</h5>
+					<a href="/category/{{.Title}}"><h5 class="card-title">{{.Title}}</h5></a>
 					<p class="card-text">{{.Description}}</p>
 				</div>
 				<div class="card-footer">
