--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -9,10 +9,12 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<!-- Bootstrap icons -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
         <!-- Local CSS -->
         <link rel="stylesheet" href="/static/css/mystyle.css" type="text/css" />
 
-		{{block "css" .}}
+		{{block "head" .}}
 		{{end}}
     </head>
 
