Added Headers & footer

--- a/ui/html/footer.partial.tmpl
+++ b/ui/html/footer.partial.tmpl
@@ -1,4 +1,11 @@
 {{define "footer"}}
-<footer>
-</footer>
+<footer class="footer">
+    <div class="inside-footer">
+        <div class="inside-footer-item">Made by: Alex, Keiti, Leonard, Martin, Robert Kris</div>
+        <div class="inside-footer-item"> © 2021 kood/ Jõhvi. All rights reserved</div>
+        <div class="inside-footer-item">
+            <a href="https://www.instagram.com/koodjohvi/?hl=en" class="bi-instagram"></a>
+            <a href="https://www.facebook.com/koodjohvi/" class="bi-facebook"></a>
+        </div>
+  </footer>
 {{end}}
