--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -1,16 +1,3 @@
-body {
-}
-
-h1 {
-
-}
-
-a, div {
-
-}
-
-
-
 label {
     display: block;
     font: .9rem 'Fira Sans', sans-serif;
@@ -44,3 +31,152 @@ label {
 	max-width: 420px;
 	max-height: 420px;
 }
+
+/*---------------------HEADERS % FOOTER---------------------*/
+/*HEADER LOGGED OUT */
+#header-mainlogo {
+    width: 9rem;
+}
+
+.navbar.header {
+    background-color: #1A1A1B;
+    border:1px solid #676869;
+}
+
+.navbar-brand.header {
+    width: 200px;
+}
+
+.headerbuttons {
+    width: 120px;
+}
+
+.btn.header {
+      padding:3px 30px;
+      font-size:23px;
+}
+
+.btn.header.btn-outline-secondary.first {
+    color: whitesmoke;
+    border-color: whitesmoke;
+    font-weight: 700;
+}
+
+.btn.header.btn-outline-secondary.first:hover {
+    background-color: #45ffdb
+}
+
+.btn.header.btn-outline-secondary.second {
+    color: #1A1A1B;
+    font-weight: 700;
+    border-color: whitesmoke;
+    background: whitesmoke;
+}
+
+.btn.header.btn-outline-secondary.second:hover {
+    background-color: #45ffdb
+}
+
+
+.btn-header0-div {
+    padding-right: 12px;
+}
+
+.btn-header1-div {
+    padding-right: 8px;
+    padding-left: 12px;
+}
+
+  
+    
+/*HEADER LOGGED IN */
+
+.dropdown-menu.header {
+    background-color: #1A1A1B;
+}
+
+.dropdown.header {
+    background-color: #1A1A1B;
+    color: whitesmoke;
+}
+
+.dropdown-menu.headerf {
+    background-color: #1A1A1B;
+    color: whitesmoke;
+    min-width: 300px !important;
+}
+
+.dropdown.headerf {
+    padding-right: 60px;
+}
+.dropdown.header {
+    padding-right: 10px;
+}
+
+.btn.inheader {
+    background-color: #1A1A1B;
+    color: whitesmoke;
+    font-weight: 600;
+}
+
+.dropdown-item.header {
+    color: whitesmoke;
+    font-weight: 600;
+    
+}
+
+.dropdown-item.comment {
+    white-space: normal;
+    min-width: 300px !important;
+
+}
+
+/*HEADER LOGGED IN (admin) */
+
+/*FOOTER */
+.footer {
+    background-color: #1A1A1B;
+    border:1px solid #676869;
+    margin-top: -50px;
+    color: whitesmoke;
+    line-height: 50px;
+    padding: 0 20px;
+  }
+
+  .inside-footer {
+	display: flex;
+  }
+  
+  .inside-footer-item {
+	flex-basis: 100%;
+	text-align: center;
+  }
+  .inside-footer-item a {
+	  color: whitesmoke; 
+ 	}
+
+/*---------------------PAGES---------------------*/
+
+/*BASE.LAYOUT */
+html {
+    height: 100%;
+    margin: 0;
+}
+.base-layout-body {
+    padding-top: 70px;
+    height: 100%;
+    background-color: #030303;
+    margin: 0;
+}
+
+.content {
+    min-height: 100%;
+  }
+  .content-inside {
+    padding: 20px;
+    padding-bottom: 50px;
+  }
+
+/*LOG IN PAGE*/
+
+/*SIGN UP PAGE*/
