--- a/ui/html/header.partial.tmpl
+++ b/ui/html/header.partial.tmpl
@@ -30,19 +30,85 @@
 
 
 {{define "header-out"}}
-<nav class="navbar navbar-dark bg-dark">
+
+<!-- HEADER LOGGED IN (ADMIN) -->
+<!-- <nav class="navbar header py-1 navbar-expand-sm fixed-top"> 
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/">
-			Kodify logo
-		</a>
-		<form class="d-flex">
-			<a class="btn btn-primary" href="/login">
-				log-in
-			</a>
-			<a class="btn btn-secondary" href="/register">
-				sign-up
-			</a>
-		</form>
+	  <a class="navbar-brand header" href="/">
+		<img id="header-mainlogo" src="/static/css/images/logo_white.png" class="rounded-pill"></a>
+			<form class="d-flex">
+					<div class="dropdown headerf">
+						<button class="btn inheader btn-secondary dropdown-toggle bi-bell" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+						</button>
+						<ul class="dropdown-menu dropdown-large comment w-100 headerf dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+						<li><a class="dropdown-item col-xs-12 comment header bi-emoji-frown" href="#"> No notifications</a></li>
+						<li><hr class="dropdown-divider"></li>
+						  <li><a class="dropdown-item col-xs-12 comment header bi-exclamation-circle" href="#"> Mike(USERID) commented(ACTION) on your post: POSTID  Profile</a></li>
+						</ul>
+						
+					  </div>
+					  
+				<div class="dropdown header">
+					<button class="btn inheader btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+					  USERIDXXXXXX
+					</button>
+					<ul class="dropdown-menu header dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+					  <li><a class="dropdown-item header bi-person-circle" href="#">   Profile</a></li>
+					  <li><a class="dropdown-item header bi-lightning-fill" href="#">   Administration</a></li>
+					  <li><hr class="dropdown-divider"></li>
+					  <li><a class="dropdown-item header bi-box-arrow-in-right" href="#">   Log Out</a></li>
+					</ul>
+				  </div>
+			</form>
+	</div>
+</nav> -->
+
+
+<!-- HEADER LOGGED IN -->
+<!-- <nav class="navbar header py-1 navbar-expand-sm fixed-top"> 
+	<div class="container-fluid">
+	  <a class="navbar-brand header" href="/">
+		<img id="header-mainlogo" src="/static/css/images/logo_white.png" class="rounded-pill"></a>
+			<form class="d-flex">
+					<div class="dropdown headerf">
+						<button class="btn inheader btn-secondary dropdown-toggle bi-bell" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+						</button>
+						<ul class="dropdown-menu dropdown-large comment w-100 headerf dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+						<li><a class="dropdown-item col-xs-12 comment header bi-emoji-frown" href="#"> No notifications</a></li>
+						<li><hr class="dropdown-divider"></li>
+						  <li><a class="dropdown-item col-xs-12 comment header bi-exclamation-circle" href="#"> Mike(USERID) commented(ACTION) on your post: POSTID  Profile</a></li>
+						</ul>
+						
+					  </div>
+					  
+				<div class="dropdown header">
+					<button class="btn inheader btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+					  USERIDXXXXXX
+					</button>
+					<ul class="dropdown-menu header dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+					  <li><a class="dropdown-item header bi-person-circle" href="#">   Profile</a></li>
+					  <li><hr class="dropdown-divider"></li>
+					  <li><a class="dropdown-item header bi-box-arrow-in-right" href="#">   Log Out</a></li>
+					</ul>
+				  </div>
+			</form>
+	</div>
+</nav> -->
+
+
+<!-- HEADER LOGGED OUT -->
+<nav class="navbar header py-1 navbar-expand-sm fixed-top"> 
+	<div class="container-fluid">
+	  <a class="navbar-brand" style="width: 200px;" href="/">
+		<img id="header-mainlogo" src="/static/css/images/logo_white.png" class="rounded-pill"></a>
+			<form class="d-flex">
+				<div class="btn-header0-div">
+					<a class="btn header btn-outline-secondary first" href="/login">Log In	</a>
+				</div>
+				<div class="btn-header1-div">	
+					<a class="btn header btn-outline-secondary second" href="/register">Sign Up</a>
+				</div>
+			</form>
 	</div>
 </nav>
 {{end}}
