--- a/ui/html/post.partial.tmpl
+++ b/ui/html/post.partial.tmpl
@@ -33,6 +33,18 @@
 
 {{define "post-js"}}
 	<script>
+		let votes = document.querySelector('#uservotes').innerText;
+		votes = votes.split(`]`).slice(0,2);
+		const upvotes = votes[0].slice(2).split(' ');
+		const downvotes = votes[1].slice(2).split(' ');
+		for (const post of upvotes) {
+			let button = document.querySelector(`#form-up-${post} button`);
+			button.classList.add("active");
+		}
+		for (const post of downvotes) {
+			let button = document.querySelector(`#form-down-${post} button`);
+			button.classList.add("active");
+		}
 		function vote(id, which) {
 			let post = document.getElementById(id);
 			let button = post.getElementsByClassName(which)[0];
@@ -49,8 +61,10 @@
 			if (button.classList.contains("active")) {
 				number *= -1;
 				button.classList.remove("active");
+				console.log(button)
 			} else {
 				button.classList.add("active");
+				console.log(button)
 			}
 
 			if (otherbutton.classList.contains("active")) {
