--- a/ui/html/header.partial.tmpl
+++ b/ui/html/header.partial.tmpl
@@ -1,5 +1,5 @@
 {{define "header-in"}}
-<nav class="navbar navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-dark bg-dark">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="/">
 		Kodify logo
@@ -25,14 +25,8 @@
 			<a class="btn btn-info" href="/logout">log-out</a>
 		</form>
 	</div>
-</nav>
-{{end}}
-
-
-{{define "header-out"}}
-
-<!-- HEADER LOGGED IN (ADMIN) -->
-<!-- <nav class="navbar header py-1 navbar-expand-sm fixed-top"> 
+</nav> -->
+<nav class="navbar header py-1 navbar-expand-sm fixed-top">
 	<div class="container-fluid">
 	  <a class="navbar-brand header" href="/">
 		<img id="header-mainlogo" src="/static/css/images/logo_white.png" class="rounded-pill"></a>
@@ -45,9 +39,44 @@
 						<li><hr class="dropdown-divider"></li>
 						  <li><a class="dropdown-item col-xs-12 comment header bi-exclamation-circle" href="#"> Mike(USERID) commented(ACTION) on your post: POSTID  Profile</a></li>
 						</ul>
-						
+
 					  </div>
-					  
+
+				<div class="dropdown header">
+					<button class="btn inheader btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+					  {{.AuthenticatedUser.Name}}
+					</button>
+					<ul class="dropdown-menu header dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+					  <li><a class="dropdown-item header bi-person-circle" href="/profile">   Profile</a></li>
+					  <li><hr class="dropdown-divider"></li>
+					  <li><a class="dropdown-item header bi-box-arrow-in-right" href="/logout">   Log Out</a></li>
+					</ul>
+				  </div>
+			</form>
+	</div>
+</nav>
+{{end}}
+
+
+{{define "header-out"}}
+
+<!-- HEADER LOGGED IN (ADMIN) -->
+<!-- <nav class="navbar header py-1 navbar-expand-sm fixed-top">
+	<div class="container-fluid">
+	  <a class="navbar-brand header" href="/">
+		<img id="header-mainlogo" src="/static/css/images/logo_white.png" class="rounded-pill"></a>
+			<form class="d-flex">
+					<div class="dropdown headerf">
+						<button class="btn inheader btn-secondary dropdown-toggle bi-bell" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+						</button>
+						<ul class="dropdown-menu dropdown-large comment w-100 headerf dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+						<li><a class="dropdown-item col-xs-12 comment header bi-emoji-frown" href="#"> No notifications</a></li>
+						<li><hr class="dropdown-divider"></li>
+						  <li><a class="dropdown-item col-xs-12 comment header bi-exclamation-circle" href="#"> Mike(USERID) commented(ACTION) on your post: POSTID  Profile</a></li>
+						</ul>
+
+					  </div>
+
 				<div class="dropdown header">
 					<button class="btn inheader btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
 					  USERIDXXXXXX
@@ -65,7 +94,7 @@
 
 
 <!-- HEADER LOGGED IN -->
-<!-- <nav class="navbar header py-1 navbar-expand-sm fixed-top"> 
+<!-- <nav class="navbar header py-1 navbar-expand-sm fixed-top">
 	<div class="container-fluid">
 	  <a class="navbar-brand header" href="/">
 		<img id="header-mainlogo" src="/static/css/images/logo_white.png" class="rounded-pill"></a>
@@ -78,9 +107,9 @@
 						<li><hr class="dropdown-divider"></li>
 						  <li><a class="dropdown-item col-xs-12 comment header bi-exclamation-circle" href="#"> Mike(USERID) commented(ACTION) on your post: POSTID  Profile</a></li>
 						</ul>
-						
+
 					  </div>
-					  
+
 				<div class="dropdown header">
 					<button class="btn inheader btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
 					  USERIDXXXXXX
@@ -97,7 +126,7 @@
 
 
 <!-- HEADER LOGGED OUT -->
-<nav class="navbar header py-1 navbar-expand-sm fixed-top"> 
+<nav class="navbar header py-1 navbar-expand-sm fixed-top">
 	<div class="container-fluid">
 	  <a class="navbar-brand" style="width: 200px;" href="/">
 		<img id="header-mainlogo" src="/static/css/images/logo_white.png" class="rounded-pill"></a>
@@ -105,7 +134,7 @@
 				<div class="btn-header0-div">
 					<a class="btn header btn-outline-secondary first" href="/login">Log In	</a>
 				</div>
-				<div class="btn-header1-div">	
+				<div class="btn-header1-div">
 					<a class="btn header btn-outline-secondary second" href="/register">Sign Up</a>
 				</div>
 			</form>
