removed post.partial, changed vote buttons active color

--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -183,3 +183,11 @@ html {
 /*LOG IN PAGE*/
 
 /*SIGN UP PAGE*/
+
+.up-button.active {
+	background-color: green
+}
+
+.down-button.active {
+	background-color: red
+}
